@@ -1,19 +1,3 @@
-/*
- * Copyright 2002-2004 the original author or authors.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-
 package com.example.spring.simple.ioc.beans;
 
 import java.lang.reflect.Constructor;
@@ -39,13 +23,16 @@ public abstract class BeanUtils {
      */
     public static Object instantiateClass(Class clazz) throws BeansException {
         try {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (InstantiationException ex) {
             throw new FatalBeanException("Could not instantiate class [" + clazz.getName() +
                 "]; Is it an interface or an abstract class? Does it have a no-arg constructor?", ex);
         } catch (IllegalAccessException ex) {
             throw new FatalBeanException("Could not instantiate class [" + clazz.getName() +
                 "]; has class definition changed? Is there a public no-arg constructor?", ex);
+        } catch (InvocationTargetException | NoSuchMethodException e) {
+            throw new FatalBeanException("Could not instantiate class [" + clazz.getName() +
+                "]; Is it an interface or an abstract class? Does it have a no-arg constructor?", e);
         }
     }
 
